--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="container">
         <div class="row">
           <div class="col-md-6">
-            6 espacios
+            Estos son 6 de 12 espacios
           </div>
           <div class="col-md-6">
-            6 espacios
+            estos son 6 de 12 espacios
           </div>
         </div>
       </div>
